--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
+    "riotjs": "^1.0.4",
     "rxjs": "^5.4.0",
     "striptags": "^3.0.1"
   },
